[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/low_level_hazards.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/main.gd" type="Script" id=5]
[ext_resource path="res://resources/materials/shader_hazard.tres" type="Material" id=6]
[ext_resource path="res://scenes/camera.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/cp_bar.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/screen_flash.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/rewind.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/pause_menu.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/end_result.tscn" type="PackedScene" id=14]

[node name="Main" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="LoLevelHaz" parent="." instance=ExtResource( 4 )]
material = ExtResource( 6 )

[node name="Hazards" type="Node2D" parent="."]

[node name="Players" type="Node2D" parent="."]

[node name="Checkpoints" type="Node2D" parent="."]

[node name="Camera" parent="." instance=ExtResource( 7 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
bus = "Music"
__meta__ = {
"_editor_description_": "Plays the actual music"
}

[node name="ScreenFlash" parent="." instance=ExtResource( 9 )]

[node name="UI" type="CanvasLayer" parent="."]

[node name="CPBar" parent="UI" instance=ExtResource( 8 )]

[node name="EndResult" parent="UI" instance=ExtResource( 14 )]

[node name="Rewind" parent="UI" instance=ExtResource( 12 )]
visible = false

[node name="PauseMenu" parent="UI" instance=ExtResource( 13 )]
visible = false

[node name="OverRect" type="ColorRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_editor_description_": "Rect for when it's over"
}
